--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,7 @@ include_dir = inc
 ;default_envs = control_softwareserial
 ;default_envs = control_usart2
 ;default_envs = control_usart3
-;default_envs = control_usart3_ADC
+default_envs = control_usart3_ADC
 ;default_envs = control_ADC
 ;default_envs = control_PPM
 
@@ -200,7 +200,9 @@ build_flags =
     -Og
 #    -Wl,-lnosys
     -D CONTROL_TYPE=0           ; Do not use predefined control type
-
+-D DEBUG_SERIAL_USART3
+-D DEBUG_SERIAL_ASCII
+-D DEBUG_BAUD=9600
 ; ###### CONTROL VIA TWO POTENTIOMETERS ######
     -D CONTROL_ADC           ; use ADC as input. disable DEBUG_SERIAL_USART2!
 
